# ptt

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
ptt-box/: .env.example  ASSISTANT.md  Dockerfile  README.md  REFINE_DICT.md  REFINE_PROMPT.md  ai_assistant.py  ai_assistant_agent.py  audio_output.py  dbhub.toml  docker-compose.yml  list_devices.py  main.py  mcp_config.json  pyproject.toml  rec_20251130_164609.srt  rec_20251130_165640.srt  run_assistant.py  stream_server.py  test_assistant.py  test_audio_output.py  test_relay.py  transcriber.py  uploader.py  vosk_realtime.py  vox_detect.py  vox_ptt_record.py  vt_client.py
ptt-box/docs/: CODE_REVIEW.md  ai-assistant-decoupling.md  ai-assistant-evaluation.md  bandwidth-analysis.md  communication-sequence.md  edge-tts-implementation.md  git-filter-repo-guide.md  implementation-notes.md  mobile-resilience-implementation.md
ptt-box/recordings/: client_names.json
ptt-box/sandbox/data/: init_db.sql
ptt-box/stream_client/: index.html  manifest.json  monitor.html  sw.js  test_assistant.html  themes.css
ptt-box/stream_client/dash/: dash.css  dash.js  index.html
ptt-box/stream_client/js/: assistant.js  history.js  info.js  monitor.js  stream.js
ptt-box/stream_server/: .env.example  TESTING.md  jest.config.js  package.json  server.js  test_relay.js  test_send.js  wrapper.js
ptt-box/stream_server/__tests__/: api.test.js  ptt-manager.test.js  utils.test.js
ptt-box/vt-client/: package.json  vt_client.js
ptt-box/web/: api.php  audio.php  index.php  manifest.json  phpunit.xml
ptt-box/web/css/: style.css
(+8 files in other folders)
